--- a/angular-forms/src/app/app.component.html
+++ b/angular-forms/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="container-fliud">
   <h1>Angular Forms</h1>
-  <form #userForm='ngForm' (ngSubmit)='onSubmit()'
-   novalidate>
+  <!-- <form #userForm='ngForm' (ngSubmit)='onSubmit()'
+   novalidate> -->
+   <form #userForm='ngForm' novalidate>
     {{userForm.form.valid}}
     <!-- <b>Userform: </b>{{userForm.value | json}}
     <hr/>
