--- a/angular-forms/src/app/user/user.component.html
+++ b/angular-forms/src/app/user/user.component.html
@@ -1,26 +1,42 @@
 <h1>Batch insert</h1>
-<form #userForm='ngForm' (ngSubmit)='onSubmit()'>
+<form #userForm='ngForm' (ngSubmit)='onSubmit(inputName.value, inputDate.value)'>
+    <label>Name :</label>
+    <select #inputName>
+      <option>--SELECT--</option>
+      <option>Monicka</option>
+      <option>Hema</option>
+      <option>Ramesh</option>
+      <option>Madhavan</option>
+      <option>Aadhavan</option>
+      <option>Madhan</option>
+      <option>Prasanth</option>
+    </select>
+
+
+
+    <label>Date</label>
+    <input type="text" #inputDate>
 <table class="table">
   <thead>
   <tr>
-    <th scope="col">Username</th>
-    <th scope="col">email</th>
-    <th scope="col">phone</th>
-    <th scope="col">topic</th>
-    <th scope="col">timePreference</th>
-    <th scope="col">promo</th>
+    <!-- <th scope="col">S.No</th> -->
+    <th scope="col">From time</th>
+    <th scope="col">To time</th>
+    <th scope="col">Planned task</th>
+    <th scope="col">Remarks</th>
+
   </tr>
   </thead>
   <tbody>
   <tr *ngFor = "let user of users" scope="row">
-      <td><input type='text' #userName='ngModel' name='userName' [(ngModel)] = user.userName /></td>
-      <td><input type='text' #email='ngModel' name='email' [(ngModel)] = user.email /></td>
-      <td><input type='text' #phone='ngModel' name='phone' [(ngModel)] = user.phone /></td>
-      <td><input type='text' #topic='ngModel' name='topic' [(ngModel)] = user.topic /></td>
-      <td><input type='text' #timePreference='ngModel' name='timePreference' [(ngModel)] = user.timePreference /></td>
-      <td><input type='text' #promo='ngModel' name='promo' [(ngModel)] = user.promo /></td>
+      <td><input type='text' #fromTime='ngModel' name='fromTime' [(ngModel)] = user.fromTime /></td>
+      <td><input type='text' #toTime='ngModel' name='toTime' [(ngModel)] = user.toTime /></td>
+      <td><input type='text' #plannedTask='ngModel' name='plannedTask' [(ngModel)] = user.plannedTask /></td>
+      <td><input type='text' #remarks='ngModel' name='remarks' [(ngModel)] = user.remarks /></td>
+
+
   </tr>
 </tbody>
-<button class="btn btn-primary" type='submit'>Submit Form</button>
+<button class="btn btn-primary" type='submit'>Submit</button>
 </table>
 </form>
