Modified User Component

--- a/angular-forms/src/app/user/user.component.html
+++ b/angular-forms/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<h1>Batch insert</h1>
+<h1>Batch </h1>
 <form #userForm='ngForm' (ngSubmit)='onSubmit(inputName.value, inputDate.value)'>
     <label>Name :</label>
     <select #inputName>
